# pc-club-monitor

./: .gitignore  CMakeLists.txt  README.md  file.txt  start
src/: Application.cpp  Application.h  main.cpp
src/config/: Config.h  ConfigLoader.cpp  ConfigLoader.h
src/manager/: ClientManager.cpp  ClientManager.h  TableManager.cpp  TableManager.h
src/models/Client/: Client.h
src/models/Event/: Event.h
src/models/Table/: Table.h
src/parser/: EventParser.cpp  EventParser.h  Validator.cpp  Validator.h
src/processor/: EventProcessor.cpp  EventProcessor.h
test/: system_tests_gtest.cpp.cpp  unit_tests.cpp
test/configs/: arrive_before_open.txt  arrive_client.txt  arrive_existing_client.txt  client_arrived_not_open.txt  client_arrived_not_open_output.txt  expected_arrive_client.txt  expected_leave_client.txt  expected_leave_end_of_day_multiple.txt  expected_seat_client.txt  expected_seat_occupied_table.txt  expected_wait_client.txt  invalid_format_first_line.txt  invalid_format_time.txt  leave_client.txt  leave_end_of_day_multiple.txt  leave_unknown_client.txt  seat_client.txt  seat_occupied_table.txt  seat_unknown_client.txt  valid_input.txt  valid_output.txt  wait_client.txt  wait_when_space.txt
